# crate-analyzer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  commands.txt  docker-compose.yaml  grapher.py  histogramer.py
src/: index_calculator.rs  main.rs  sqlite_handler.rs
