[package]
name = "crate_analyzer"
version = "0.1.0"
authors = ["Algirdas <sdkster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "0.9.0"
semver-parser = "0.9.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
cargo-lock = { version = "4.0.1", features = ["dependency-tree"] }
dirs = "2.0.1"
exitcode = "1.1.2"
quick-error = "1.2.3"
rusqlite = { version = "0.18.0", features = ["bundled"] }